[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
log = "0.4.17"
env_logger = "0.10.0"
aws-sdk-dynamodb = "0.24.0"
aws-config = "0.54.1"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_24"] }
dotenv = "0.15.0"
async_once = "0.2.6"
lazy_static = "1.4.0"