[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_24"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6.6", features = ["headers"] }
async_once = "0.2.6"
lazy_static = "1.4.0"
validator = { version = "0.15", features = ["derive", "card"] }
lambda_runtime = "0.7.3"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "fmt"] }
lambda_http = "0.7.3"
bcrypt = "0.14.0"
wither = "0.9.0"
thiserror = "1.0.39"
aws-sdk-kms = "0.24.0"
base64 = "0.13.0"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
